--- a/src/App.css
+++ b/src/App.css
@@ -8,194 +8,19 @@
   align-items: center;
   position: relative;
   overflow: hidden;
-  background: linear-gradient(180deg, #87CEEB 0%, #E0F6FF 100%);
 }
 
-/* Minimalistic landscape elements */
-.landscape {
-  position: absolute;
-  bottom: 0;
+.background {
+  position: fixed;
+  top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
   overflow: hidden;
 }
 
-.sun {
-  position: absolute;
-  top: 50px;
-  right: 100px;
-  width: 80px;
-  height: 80px;
-  background: #FFD700;
-  border-radius: 50%;
-  box-shadow: 0 0 50px rgba(255, 215, 0, 0.4);
-}
 
-.mountain {
-  position: absolute;
-  bottom: 0;
-  width: 0;
-  height: 0;
-  border-style: solid;
-}
-
-.mountain-1 {
-  left: 10%;
-  border-width: 0 100px 200px 100px;
-  border-color: transparent transparent #4A6363 transparent;
-}
-
-.mountain-2 {
-  left: 30%;
-  border-width: 0 150px 300px 150px;
-  border-color: transparent transparent #3D5252 transparent;
-}
-
-.mountain-3 {
-  right: 20%;
-  border-width: 0 125px 250px 125px;
-  border-color: transparent transparent #2F4040 transparent;
-}
-
-.mountain-1 {
-  left: 10%;
-  border-width: 0 100px 200px 100px;
-  border-color: transparent transparent #4A6363 transparent;
-}
-
-.mountain-2 {
-  left: 30%;
-  border-width: 0 150px 300px 150px;
-  border-color: transparent transparent #3D5252 transparent;
-}
-
-.mountain-3 {
-  right: 20%;
-  border-width: 0 125px 250px 125px;
-  border-color: transparent transparent #2F4040 transparent;
-}
-
-.ground {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 25%;
-  background: linear-gradient(to bottom, #4A9460, #3A7450);
-  z-index: 1;
-}
-
-.forest {
-  position: absolute;
-  bottom: 25%;
-  width: 100%;
-  height: 15%;
-  z-index: 2;
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-end;
-}
-
-.tree {
-  width: 40px;
-  height: 60px;
-  background: linear-gradient(to bottom, #2D5A27 50%, #1E3D1A);
-  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-  margin: 0 10px;
-  transform-origin: bottom center;
-  animation: sway 3s ease-in-out infinite;
-}
-
-@keyframes sway {
-  0%, 100% { transform: rotate(0deg); }
-  50% { transform: rotate(2deg); }
-}
-
-.castle {
-  position: absolute;
-  bottom: 25%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 200px;
-  height: 250px;
-  z-index: 3;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-}
-
-.castle-main {
-  width: 120px;
-  height: 180px;
-  background: linear-gradient(to bottom, #8B8B8B, #696969);
-  position: relative;
-}
-
-.castle-tower {
-  width: 40px;
-  height: 220px;
-  background: linear-gradient(to bottom, #8B8B8B, #696969);
-  position: absolute;
-  bottom: 0;
-}
-
-.castle-tower-left {
-  left: -40px;
-}
-
-.castle-tower-right {
-  right: -40px;
-}
-
-.castle-top {
-  position: absolute;
-  top: -20px;
-  width: 100%;
-  height: 20px;
-  background: #A0A0A0;
-  clip-path: polygon(0% 100%, 50% 0%, 100% 100%);
-}
-
-.castle-window {
-  width: 20px;
-  height: 30px;
-  background: #FFD700;
-  position: absolute;
-  border-radius: 10px 10px 0 0;
-}
-
-.castle-window-1 {
-  top: 40px;
-  left: 25px;
-}
-
-.castle-window-2 {
-  top: 40px;
-  right: 25px;
-}
-
-.castle-window-3 {
-  top: 90px;
-  left: 25px;
-}
-
-.castle-window-4 {
-  top: 90px;
-  right: 25px;
-}
-
-.castle-door {
-  width: 40px;
-  height: 60px;
-  background: #4A3C2A;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 20px 20px 0 0;
-}
 
 .game-container {
   display: flex;
